2005-10-10  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/winmain.c (win_lower_terminal_window): "lower" command for the
	Windows terminal.

2005-10-09  Harald Harders  <h.harders@tu-bs.de>

	* src/misc.c (lp_parse arrow_parse) set.c (set_linestyle set_arrowstyle)
	src/plot2d.c (eval_plots) src/plot3d.c (eval_3dplots) docs/gnuplot.doc:

	Bring "set style line ..." and "set style arrow ..." into agreement with
	other "set style <foo>" commands by retaining current properties, rather
	than resetting to the default style each time. The previous behavior was
	undocumented.  Add an explicit command "set style {line|arrow} default".

2005-10-09  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/pdf.trm term/svg.trm (START_HELP): Small changes.

	* term/x11.trm (START_HELP): Reorganized list of options.

2005-10-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/os2/gclient.c term/pm.trm: "lower" command for the pm terminal.

2005-10-07  Ethan Merritt  <merritt@u.washington.edu>

	* term/cgm.trm: Fix pattern-fill code, which was not working.
	If the user explicitly provides a background color, apply it to the
	entire canvas when plotting is started. The was documented, but
	apparently never implemented.  Bug #616167.
	Also update linetype code so that it is possible to give the 
	the background color as a line property.

2005-10-07  Daniel Sebald  <daniel.sebald@ieee.org>

	SF patch [ 859716 ] new raise/lower commands

	* NEWS docs/gnuplot.doc src/command.c src/command.h src/gplt_x11.c
	src/os2/gclient.c src/tables.c src/win/winmain.c term/pm.trm
	term/x11.trm: Commands "raise" and "lower" to raise and lower windows of
	interactive terminals.

2005-10-07  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (system_command): Remove superfluous c_token++.

2005-10-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/syscfg.h: Increased MAX_NUM_VAR from 5 to 12 (max number of
	parameters for functions).
