@@ -1,3 +1,8 @@
+2005-10-11  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/graph3d.c (plot3d_points): Small code clean up in preparation
+	for possible addition of a sorting step prior to plotting.
+
 2005-10-10  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* src/win/winmain.c (win_lower_terminal_window): "lower" command for the
